--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,15 @@
 .jovianrc
 .vscode
 *.yml
+
+
+pytorch/03-logistic-regression/data/MNIST/processed/test.pt
+pytorch/03-logistic-regression/data/MNIST/processed/training.pt
+pytorch/03-logistic-regression/data/MNIST/raw/t10k-images-idx3-ubyte
+pytorch/03-logistic-regression/data/MNIST/raw/t10k-labels-idx1-ubyte
+pytorch/03-logistic-regression/data/MNIST/raw/train-images-idx3-ubyte
+pytorch/03-logistic-regression/data/MNIST/raw/train-labels-idx1-ubyte
+pytorch/03-logistic-regression/data/MNIST/raw/t10k-images-idx3-ubyte.gz
+pytorch/03-logistic-regression/data/MNIST/raw/t10k-labels-idx1-ubyte.gz
+pytorch/03-logistic-regression/data/MNIST/raw/train-images-idx3-ubyte.gz
+pytorch/03-logistic-regression/data/MNIST/raw/train-labels-idx1-ubyte.gz
